# MLOpsSandbox

./: .gitignore  LICENSE  README.md  netdata.yml
airflow/: .env  README.md  docker-compose.yaml  init.sh  start.sh
clearml/: .dockerignore  .env  .env.example  .gitignore  Makefile  README.md  docker-compose.agent-remote.yml  docker-compose.agent.yml  docker-compose.yml
clearml/config/: clearml-agent.conf.example
clearml/docker/: Dockerfile  Dockerfile.executor  entrypoint.sh
clearml/sample_project/: .env  .gitignore  README.md  clearml.conf  pyproject.toml  remote_execution.ipynb
clearml/scripts/: activate_local_venv.sh  clearml_clean_redundant_tasks.py  clearml_sample.py  restart.sh  start.sh
cvat/: .env  .gitignore  README.md
cvat/scripts/: start.sh  start_cvat.sh  stop.sh
cvat/src/: docker-compose.yml
guacamole/: .env  docker-compose.yaml
guacamole/scripts/: start.sh  stop.sh
jupyterlab/: .env  Dockerfile  docker-compose.yml
jupyterlab/scripts/: start.sh
minio/: .env  docker-compose.yaml
minio/scripts/: restart.sh
mlflow/: .env  Dockerfile  README.md  docker-compose.yml
mlflow/scripts/: start.sh
nextcloud/: .env  docker-compose.yaml
nextcloud/scripts/: start.sh
postgresql/: .env  docker-compose.yaml
pyspark/: .env  docker-compose.yaml
scripts/: build_cmake.sh  build_open3d.sh  build_opencv_cpu.sh  build_opencv_gpu.sh  build_pcl.sh  build_torch_cu113.sh  cuda_get_compute_arch.sh  init_env.sh  install_dependencies.sh
swagger-editor/: .env  docker-compose.yaml
wandb/: .env  README.md
wandb/scripts/: start.sh
