[tool.poetry]
name = "sample-project"
version = "0.1.0"
description = ""
authors = ["AlexDev <alexey4dev@gmail.com>"]
readme = "README.md"
packages = [{include = "sample_project"}]

[tool.poetry.dependencies]
python = "~=3.8.0"
python-dotenv = "^0.21.1"


[tool.poetry.group.dev.dependencies]
catalyst = "^22.4"
clearml = "^1.9.1"
ipykernel = "^6.20.2"
tensorboard = "^2.11.2"
nbconvert = "^7.2.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
